--- a/Waterwatch/Packages/manifest.json
+++ b/Waterwatch/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.postprocessing": "3.0.3",
     "com.unity.probuilder": "4.4.0",
     "com.unity.render-pipelines.universal": "7.5.3",
     "com.unity.terrain-tools": "3.0.2-preview.3",
